--- a/res/layout/item_menu.xml
+++ b/res/layout/item_menu.xml
@@ -49,7 +49,9 @@
         android:id="@+id/tv_remark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_remark_tip"
+        android:layout_alignBottom="@+id/tv_remark_tip"
+        android:layout_toRightOf="@+id/tv_remark_tip"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="" />
 
