--- a/res/layout/layout_activity_add_menu.xml
+++ b/res/layout/layout_activity_add_menu.xml
@@ -1,77 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout 
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
-    
 
-   <RelativeLayout 
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="20dp"
-       android:padding="10dp">
-       <TextView android:id="@+id/tv_menu_name_tip"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_centerVertical="true"
-           android:textSize="16sp"
-           android:text="菜单名称"/>
-       <EditText android:id="@+id/et_menu_name"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_centerVertical="true"
-           android:background="@drawable/inputbg_normal"
-           android:layout_marginLeft="10dp"
-           android:layout_toRightOf="@+id/tv_menu_name_tip"
-           android:inputType="text"/>
-   </RelativeLayout> 
-   
-      <RelativeLayout 
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="10dp"
-       android:padding="10dp">
-       <TextView android:id="@+id/tv_menu_price_tip"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_centerVertical="true"
-           android:textSize="16sp"
-           android:text="菜单单价"/>
-       <EditText android:id="@+id/et_menu_price"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_centerVertical="true"
-           android:background="@drawable/inputbg_normal"
-           android:layout_marginLeft="10dp"
-           android:layout_toRightOf="@+id/tv_menu_price_tip"
-           android:inputType="number"/>
-   </RelativeLayout> 
-   <RelativeLayout 
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="10dp"
-       android:padding="10dp">
-       <TextView android:id="@+id/tv_menu_remark_tip"  
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:textSize="16sp"
-           android:text="备注信息(选填)"/>
-       <EditText android:id="@+id/et_menu_remark"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:background="@drawable/inputbg_normal"
-           android:minHeight="100dp"
-           android:layout_marginLeft="10dp"
-           android:layout_marginTop="10dp"
-           android:layout_below="@+id/tv_menu_remark_tip"  
-           android:inputType="number"/>
-   </RelativeLayout>  
-   
-   <Button android:id="@+id/btn_save"
-       android:layout_width="match_parent"
-       android:layout_height="50dp"
-       android:layout_margin="10dp"
-       android:textColor="@color/white"
-       android:text="保存"
-       android:background="@drawable/btn_blue_bg"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:padding="10dp" >
+
+        <TextView
+            android:id="@+id/tv_menu_name_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="菜单名称"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/et_menu_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/tv_menu_name_tip"
+            android:background="@drawable/inputbg_normal"
+            android:inputType="text"
+            android:padding="10dp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:padding="10dp" >
+
+        <TextView
+            android:id="@+id/tv_menu_price_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="菜单单价"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/et_menu_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/tv_menu_price_tip"
+            android:background="@drawable/inputbg_normal"
+            android:inputType="number"
+            android:padding="10dp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:padding="10dp" >
+        
+       <TextView
+            android:id="@+id/tv_menu_unit_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="计时单位"
+            android:textSize="16sp" />
+       
+       <Spinner
+            android:id="@+id/spinner_unit"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/tv_menu_unit_tip"
+            android:background="@drawable/xiala_btn_press" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:padding="10dp" >
+
+        <TextView
+            android:id="@+id/tv_menu_remark_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="备注信息(选填)"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/et_menu_remark"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_below="@+id/tv_menu_remark_tip"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/inputbg_normal"
+            android:gravity="top|left"
+            android:padding="10dp" />
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/btn_blue_bg"
+        android:text="保存"
+        android:textColor="@color/white" />
+
 </LinearLayout>
+</ScrollView>
