--- a/res/layout/layout_activity_add_register_detail.xml
+++ b/res/layout/layout_activity_add_register_detail.xml
@@ -10,24 +10,23 @@
         android:layout_marginBottom="10dp">
 
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/tv_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:text="姓名"
+            android:text="项目的名称"
             android:textSize="18sp" />
 
-        <EditText
-            android:id="@+id/et_name"
+        <Spinner
+            android:id="@+id/spinner_item_name"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginRight="10dp"
             android:padding="10dp"
-            android:textSize="18sp"
-            android:layout_toRightOf="@+id/tv_name"
-            android:background="@drawable/inputbg_normal"
+            android:layout_toRightOf="@+id/tv_item_name"
+            android:background="@drawable/xiala_btn_press"
             android:inputType="text" 
             android:text=""/>
     </RelativeLayout>
@@ -36,39 +35,67 @@
         android:id="@+id/layout_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_save"
-         >
+        android:layout_above="@+id/layout_time"
+        android:layout_marginBottom="10dp"
+        >
 
         <TextView
-            android:id="@+id/tv_phone"
+            android:id="@+id/tv_person_num_tip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:text="手机"
+            android:text="参与的人数"
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/et_phone"
+            android:id="@+id/et_person_num"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginRight="10dp"
             android:padding="10dp"
             android:textSize="18sp"
             android:background="@drawable/inputbg_normal"
-            android:layout_toRightOf="@+id/tv_phone"
-            android:inputType="phone" />
+            android:layout_toRightOf="@+id/tv_person_num_tip"
+            android:inputType="number" />
     </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/layout_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+         >
 
+        <TextView
+            android:id="@+id/tv_time_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:text="参与时长(时)"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/et_time"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"
+            android:textSize="18sp"
+            android:background="@drawable/inputbg_normal"
+            android:layout_toRightOf="@+id/tv_time_tip"
+            android:inputType="number" />
+    </RelativeLayout>
     <Button
         android:id="@+id/btn_save"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:layout_below="@+id/layout_time"
         android:textSize="16sp"
         android:textColor="@color/white"
         android:background="@drawable/btn_blue_bg"
