--- a/res/layout/layout_fragment_consult.xml
+++ b/res/layout/layout_fragment_consult.xml
@@ -3,21 +3,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-	<FrameLayout 
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent">
-	    <ListView android:id="@+id/lv_menus"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:divider="@drawable/line"
-            android:listSelector="#00000000"/>
-	    
-	    <TextView android:id="@+id/tv_msg"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="center"
-	        android:text="暂时没有项目清单"
-	        android:textSize="18sp"/>
-	</FrameLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:padding="10dp" >
+
+        <TextView
+            android:id="@+id/tv_operate_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="操作提示:"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_operate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/tv_operate_tip"
+            android:text="单击进入编辑页,长按删除"
+            android:textColor="#FF0000"
+            android:textSize="18sp" />
+    </RelativeLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <ListView
+            android:id="@+id/lv_menus"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@drawable/line"
+            android:listSelector="#00000000" />
+
+        <TextView
+            android:id="@+id/tv_msg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="暂时没有项目清单"
+            android:textSize="18sp" />
+    </FrameLayout>
+
 </LinearLayout>
