--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -7,6 +7,7 @@
     -->
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- API 14 theme customizations can go here. -->
+        <item name="homeAsUpIndicator">@drawable/icon_back</item>
     </style>
 
 </resources>
