--- a/res/values/styles_customblue.xml
+++ b/res/values/styles_customblue.xml
@@ -29,7 +29,7 @@
         <item name="actionModeBackground">@drawable/cab_background_top_customblue</item>
         <item name="actionModeSplitBackground">@drawable/cab_background_bottom_customblue</item>
         <item name="actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Customblue</item>
-
+		<item name="homeAsUpIndicator">@drawable/icon_back</item> 
                 <!-- Light.DarkActionBar specific -->
         <item name="actionBarWidgetTheme">@style/Theme.Customblue.Widget</item>
 
